<resources>
    <string name="app_name">Calculator</string>
    <string name="height">Výška</string>
    <string name="weight">Hmotnost</string>
    <string name="weight_kg">Hmotnost (kg)</string>
    <string name="height_m">Výška (cm)</string>
    <string name="bmi_calculator">BMI Kalkulačka</string>
    <string name="do_count">Vypočítat</string>
    <string name="bmi_graf">BMI Graf</string>
    <string name="fuel">Benzín</string>
    <string name="_6">6</string>
    <string name="_4">4</string>
    <string name="_div">/</string>
    <string name="equals">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="ans">ANS</string>
    <string name="mul">*</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="ac">AC</string>
    <string name="dot">.</string>
    <string name="_0">0</string>
    <string name="_5">5</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="calculator">Kalkulačka</string>
    <string name="bmi">BMI</string>
    <string name="calc">Kalk</string>
    <string name="_fuel">Benzín</string>
    <string name="_bmi">BMI</string>
    <string name="results">Výsledky</string>
    <string name="weight_value">0 kg</string>
    <string name="height_value">0 cm</string>
</resources>